# AI_fire_detector_esp32

./: .gitignore
server/: CMakeLists.txt
server/communication/: CMakeLists.txt
server/communication/include/: communication.h
server/communication/src/: socketCommunication.cpp
server/imageGen/: CMakeLists.txt
server/imageGen/include/: imageGen.h
server/imageGen/src/: imageGen.cpp
server/include/: threadManager.h
server/src/: fireCameraServer.cpp  threadManager.cpp
wifiCamera/components/communication/: CMakeLists.txt
wifiCamera/components/communication/include/: camera.h
wifiCamera/components/communication/src/: camera.c  communication.c
wifiCamera/components/stateMachine/src/: stateMachineWifiCam.c
wifiCamera/components/wifi/src/: wifi.c
wifiCamera/main/: wifiCamera.c
